# rss-gobbler

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  types.rs
