[package]
name = "rss-gobbler"
version = "0.1.0"
edition = "2021"
authors = ["Jesse Wyatt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "*"
rss = "^2"
clap = "*"
futures = "*"
tracing = "*"
tracing-futures= { version = "*", features= ["tokio"] }
tracing-subscriber = "*"