[package]
name = "rss-gobbler"
version = "0.2.1"
edition = "2021"
authors = ["Jesse Wyatt"]
description = "A simple app for async mass downloading podcasts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "*"
rss = "^2"
clap = "*"
futures = "^0.3"
tracing = "*"
tracing-futures= { version = "*", features= ["tokio"] }
tracing-subscriber = "*"
regex = "*"